  finaliser. In long-running C functions, this can be replaced
  with calls to caml_process_pending_actions at safe points.
  (Guillaume Munch-Maccagnoni, review by Jacques-Henri Jourdan and
   Stephen Dolan)

- #8630: Use abort() instead of exit(2) in caml_fatal_error, and add
  the new hook caml_fatal_error_hook.
  (Jacques-Henri Jourdan, review by Xavier Leroy)

- #8713: Introduce a state table in the runtime to contain the global variables
   which must be duplicated for each domain in the multicore runtime.
   (KC Sivaramakrishnan and Stephen Dolan, compatibility header hacking by
    David Allsopp, review by David Allsopp, Alain Frisch, Nicolas Ojeda Bar,
    Gabriel Scherer, Damien Doligez, and Guillaume Munch-Maccagnoni)

- #8641: Better call stacks when a C call is involved in byte code mode
  (Jacques-Henri Jourdan, review by Xavier Leroy)

### Tools:

* #6792, #8654 ocamldebug now supports program using Dynlink. This
   breaks compatibility with emacs modes.
   (Whitequark and Jacques-Henri Jourdan, review by Gabriel Scherer
    and Xavier Clerc)

- #8621: Make ocamlyacc a Windows Unicode application
  (David Allsopp, review by Nicolás Ojeda Bär)

* #8834, `ocaml`: adhere to the XDG base directory specification to
  locate an `.ocamlinit` file. Reads an `$XDG_CONFIG_HOME/ocaml/init.ml`
  file before trying to lookup `~/.ocamlinit`. On Windows the behaviour
  is unchanged.
  (Daniel C. Bünzli, review by David Allsopp, Armaël Guéneau and
   Nicolás Ojeda Bär)

### Standard library:

- #8651: add '%#F' modifier in printf to output OCaml float constants
  in hexadecimal
  (Pierre Roux, review by Gabriel Scherer and Xavier Leroy)

- #8832: List.find_map : ('a -> 'b option) -> 'a list -> 'b option
  (Gabriel Scherer, review by Jeremy Yallop, Nicolás Ojeda Bär
   and Daniel Bünzli)

- #8657: Optimization in [Array.make] when initializing with unboxed
   or young values.
   (Jacques-Henri Jourdan, review by Gabriel Scherer and Stephen Dolan)
